carrer page hide or index url change

--- a/content-creater.html
+++ b/content-creater.html
@@ -133,8 +133,8 @@
                 </div>
             </div>
         </div>
-
         <!-- header start -->
+
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -143,7 +143,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -157,7 +157,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -187,7 +187,7 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
+                                            <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="team">Team </a></li>
 
@@ -243,11 +243,13 @@
                 </div>
             </div>
         </header>
+
         <!-- Start Offcanvas header menu -->
+
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -257,7 +259,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -304,8 +306,8 @@
                 </nav>
             </div>
         </div>
-        <!-- End Offcanvas header menu -->
 
+        <!-- End Offcanvas header menu -->
 
 
         <!-- breadcrumbarea__start -->
@@ -860,8 +862,7 @@
                                                     class="icofont-skype"></i></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/digital-minds-on"
-                                                target="_blank">
+                                            <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
                                                 <i class="icofont-linkedin"></i>
                                             </a>
                                         </li>
