--- a/login.html
+++ b/login.html
@@ -122,9 +122,9 @@
         </div>
 
 
-        <!-- header start -->
+         <!-- header start -->
 
-        <header>
+         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
                     <div class="headerarea__main__wrapper position-relative">
@@ -132,7 +132,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -146,7 +146,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -176,7 +176,7 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
+                                            <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="team">Team </a></li>
 
@@ -232,12 +232,13 @@
                 </div>
             </div>
         </header>
+
         <!-- Start Offcanvas header menu -->
 
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -247,7 +248,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -259,7 +260,7 @@
                                 <li class="offcanvas__sub_menu_li"><a href="project"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
-                                            class="offcanvas__sub_menu_item">Project Details</a></li> -->
+                                        class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li">
