--- a/project-details.html
+++ b/project-details.html
@@ -121,7 +121,6 @@
             </div>
         </div>
 
-
         <!-- header start -->
 
         <header>
@@ -132,7 +131,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -146,7 +145,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -176,7 +175,7 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
+                                            <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="team">Team </a></li>
 
@@ -232,12 +231,13 @@
                 </div>
             </div>
         </header>
+
         <!-- Start Offcanvas header menu -->
 
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -247,7 +247,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -259,7 +259,7 @@
                                 <li class="offcanvas__sub_menu_li"><a href="project"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
-                                            class="offcanvas__sub_menu_item">Project Details</a></li> -->
+                                        class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li">
@@ -760,7 +760,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2000">
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
+                                data-aos-duration="2000">
                                 <div class="footer__widget footer__support">
                                     <div class="footer__menu__title">
                                         <h6>SUPPORT :</h6>
@@ -786,7 +787,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2500">
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
+                                data-aos-duration="2500">
                                 <div class="footer__widget footer__quick">
                                     <div class="footer__menu__title">
                                         <h6>QUICK LINKS :</h6>
@@ -812,7 +814,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up"
+                                data-aos-duration="3000">
                                 <div class="footer__widget footer__right">
                                     <div class="footer__menu__title">
                                         <h6>SUBSCRIP NEWSLETTER :</h6>
