--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -183,7 +183,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -213,7 +213,7 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
+                                            <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="team">Team </a></li>
 
@@ -275,7 +275,7 @@
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -285,7 +285,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -1547,7 +1547,9 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
+                                    <a class="offcanvas__logo_link" href="/">
                                     <img src="assets/img/logo/full-logo.svg" alt="">
+                                    </a>
                                 </div>
                                 <div class="footer__text">
                                     <p>Trusted software, web, and app development company delivering innovative
@@ -1588,7 +1590,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="index">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
                                             <a href="about">About us</a>
@@ -1653,7 +1655,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="index">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
