--- a/project.html
+++ b/project.html
@@ -130,7 +130,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -144,7 +144,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -174,7 +174,7 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
+                                            <!-- <li><a href="#">Careers </a></li> -->
                                             <li><a href="blog">BLOG </a></li>
                                             <li><a href="team">Team </a></li>
 
@@ -230,12 +230,13 @@
                 </div>
             </div>
         </header>
+
         <!-- Start Offcanvas header menu -->
 
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -245,7 +246,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -756,8 +757,7 @@
                                                     class="icofont-skype"></i></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/digital-minds-on"
-                                                target="_blank">
+                                            <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
                                                 <i class="icofont-linkedin"></i>
                                             </a>
                                         </li>
