--- a/contact.html
+++ b/contact.html
@@ -581,12 +581,13 @@
                     </div>
                 </div>
                 <!-- brand__start -->
+                <!-- footer start -->
                 <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
                     style="background-image: url(assets/img/footer/footer_1.png);">
 
                     <div class="bastun__brand__badge bastun__brand__badge__footer">
                         <div class="bastun__brand__badge__inner position-relative">
-                            <a href="index.html">
+                            <a href="/">
 
                                 <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                                 <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -600,7 +601,9 @@
                                 <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                     <div class="footer__widget footer__left">
                                         <div class="footer__logo">
-                                            <img src="assets/img/logo/full-logo.svg" alt="">
+                                            <a class="offcanvas__logo_link" href="/">
+                                                <img src="assets/img/logo/full-logo.svg" alt="">
+                                            </a>
                                         </div>
                                         <div class="footer__text">
                                             <p>Trusted software, web, and app development company delivering innovative
@@ -642,7 +645,7 @@
                                         <div class="footer__menu">
                                             <ul>
                                                 <li>
-                                                    <a href="index">Home</a>
+                                                    <a href="/">Home</a>
                                                 </li>
                                                 <li>
                                                     <a href="about">About us</a>
@@ -709,8 +712,7 @@
                             <div class="row align-items-center">
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                     <div class="copyright__left">
-                                        <p>Copyright © 2024 <a href="index">Digitalminds on.</a> All Right Reserved</p>
-                                        </p>
+                                        <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
                                     </div>
                                 </div>
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-12">
