--- a/error.html
+++ b/error.html
@@ -379,10 +379,10 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="index.html">
+                    <a href="/">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
@@ -393,7 +393,9 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
+                                    <a class="offcanvas__logo_link" href="/">
                                     <img src="assets/img/logo/full-logo.svg" alt="">
+                                    </a>
                                 </div>
                                 <div class="footer__text">
                                     <p>Trusted software, web, and app development company delivering innovative
@@ -417,7 +419,8 @@
                                                     class="icofont-skype"></i></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
+                                            <a href="https://www.linkedin.com/company/digital-minds-on"
+                                                target="_blank">
                                                 <i class="icofont-linkedin"></i>
                                             </a>
                                         </li>
@@ -433,7 +436,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="index">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
                                             <a href="about">About us</a>
@@ -498,7 +501,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="index">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
