--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="index.html">
+                    <a href="/">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
