--- a/team-details.html
+++ b/team-details.html
@@ -1039,10 +1039,10 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="index.html">
+                    <a href="/">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
@@ -1053,7 +1053,9 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <img src="assets/img/logo/full-logo.svg" alt="">
+                                    <a class="offcanvas__logo_link" href="/">
+                                        <img src="assets/img/logo/full-logo.svg" alt="">
+                                    </a>
                                 </div>
                                 <div class="footer__text">
                                     <p>Trusted software, web, and app development company delivering innovative
@@ -1093,7 +1095,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="index">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
                                             <a href="about">About us</a>
@@ -1158,7 +1160,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="index">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="/">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -1180,6 +1182,7 @@
             </div>
         </div>
         <!-- footer__section__end -->
+
         <!-- back to top -->
         <a class="back-to-top" id="backToTop">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
