home content update

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-12" data-aos="fade-up"
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12" data-aos="fade-up"
                             data-aos-duration="1500">
                             <div class="project__single single__transform">
                                 <div class="project__img">
@@ -1098,7 +1098,7 @@
 
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-8 col-12" data-aos="fade-up"
+                        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12" data-aos="fade-up"
                             data-aos-duration="2100">
                             <div class="project__single single__transform">
                                 <div class="project__content">
@@ -1126,35 +1126,31 @@
                                             </a>
                                         </div>
                                     </div>
+                                    <div class="project__bottom aos-init aos-animate w-100" style="padding: 20px 0px;"
+                                        data-aos="fade-up" data-aos-duration="1500">
+                                        <div class="row align-items-center">
+                                            <div class="col-xl-6 col-lg-6  col-md-6 col-sm-6 col-12">
+                                                <div class="project__bottom__button">
+                                                    <a class="default__button" href="javascript:void(0);">VIEW OTHER
+                                                        PROJECT</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                                <div class="project__bottom__img text-center">
+                                                    <img src="assets/img/project/project__small__img__2.png" alt="">
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="project__small__img">
-                        <img class="project__img__1" src="assets/img/project/project__small__img.png" alt="">
-                        <img class="project__img__2" src="assets/img/project/project__small__img__1.png" alt="">
-                    </div>
-                </div>
-                <div class="container project__bottom" data-aos="fade-up" data-aos-duration="1500">
-                    <div class="row align-items-center">
-                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-                            <div class="project__bottom__button">
-                                <a class="default__button" href="javascript:void(0);">VIEW OTHER PROJECT</a>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
-                            <div class="project__bottom__img text-center">
-                                <img src="assets/img/project/project__small__img__2.png" alt="">
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                            <div class="project__bottom__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <a
-                                        href="javascript:void(0);">incididunt ut labore et dolore magna aliqua.</a> Ut
-                                    enim ad minim
-                                    veniam, quis nostrud exercitation.</p>
-                            </div>
-                        </div>
+                        <img class="project__img__1" src="assets/img/project/project__small__img.png" alt="img-fluid">
+                        <img class="project__img__2" src="assets/img/project/project__small__img__1.png"
+                            alt="img-fluid">
                     </div>
                 </div>
             </div>
@@ -1548,7 +1544,7 @@
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
                                     <a class="offcanvas__logo_link" href="/">
-                                    <img src="assets/img/logo/full-logo.svg" alt="">
+                                        <img src="assets/img/logo/full-logo.svg" alt="">
                                     </a>
                                 </div>
                                 <div class="footer__text">
@@ -1573,8 +1569,7 @@
                                                     class="icofont-skype"></i></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/company/digital-minds-on"
-                                                target="_blank">
+                                            <a href="https://www.linkedin.com/company/digital-minds-on" target="_blank">
                                                 <i class="icofont-linkedin"></i>
                                             </a>
                                         </li>
