url name update

--- a/web-development-services.html
+++ b/web-development-services.html
@@ -342,8 +342,8 @@
                                 </div>
                                 <div class="banner-button">
                                     <ul class="common-button">
-                                        <a class="default__button" href="#">GET FREE QUATE</a>
-                                        <a class="default__button" href="#">Contact Us</a>
+                                        <a class="default__button" href="javascript:void(0)">GET FREE QUATE</a>
+                                        <a class="default__button" href="javascript:void(0)">Contact Us</a>
                                     </ul>
                                 </div>
                             </div>
@@ -391,55 +391,55 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="webdevelopment.html">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software.html">Software Development
+                                            <a class="sidebar__common__input" href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="appdevelop.html">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digtalmarketing.html">Digital
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
                                                 Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress.html">WordPress
+                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress
                                                 Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="uidesign.html">UI/UX Design
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="GameDevelop.html">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="seo.html">SEO Specialist
+                                            <a class="sidebar__common__input" href="seo-services">SEO Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="itexpert.html">IT Specialist
+                                            <a class="sidebar__common__input" href="network-services">IT Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
