url name change

--- a/software-development-services.html
+++ b/software-development-services.html
@@ -336,8 +336,8 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">Contact Us</a>
+                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <a class="default__button" href="contact">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
@@ -381,43 +381,43 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Software Development
+                                            <a class="sidebar__common__input" href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">WordPress Development
+                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="uidesign.html">UI/UX Design
+                                            <a class="sidebar__common__input" href="ui-ux-design">UI/UX Design
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -427,12 +427,12 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Content creator
+                                            <a class="sidebar__common__input" href="content-creater">Content creator
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">IT Specialists
+                                            <a class="sidebar__common__input" href="network-services">IT Specialists
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
