--- a/web-development-services.html
+++ b/web-development-services.html
@@ -342,8 +342,8 @@
                                 </div>
                                 <div class="banner-button">
                                     <ul class="common-button">
-                                        <a class="default__button" href="javascript:void(0)">GET FREE QUATE</a>
-                                        <a class="default__button" href="javascript:void(0)">Contact Us</a>
+                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                        <a class="default__button" href="contact">Contact Us</a>
                                     </ul>
                                 </div>
                             </div>
