--- a/software-development-services.html
+++ b/software-development-services.html
@@ -337,7 +337,7 @@
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="request-quote">GET FREE QUATE</a>
-                                    <a class="default__button" href="contact">Contact Us</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
                         </div>
@@ -811,7 +811,7 @@
                                 are prepared to help.</p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="#">GET A FREE QUOTE</a>
+                            <a class="default__button" href="request-quote">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
