--- a/network-services.html
+++ b/network-services.html
@@ -871,7 +871,7 @@
                                 effectiveness.</p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                            <a class="default__button" href="request-quote.html">GET A FREE QUOTE</a>
+                            <a class="default__button" href="request-quote">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
